examples/test/testpolicy4251.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4251
  namespace: namespace201
spec:
  podSelector:
    matchLabels:
      key49: value33
      key16: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value13
          key25: value24
      podSelector:
        matchLabels:
          key9: value6
          key22: value7
